# all

./: .gitignore  README.md  sample.env
guides/: DNS_Resolver.md  NetworkGizmos.md
infra/: README.md  ansible.cfg  pyproject.toml
infra/bicep/: README.md
infra/bicep/01/: main.bicep  main.bicepparam.sample
infra/bicep/01/modules/: bastion.bicep  firewall.bicep  hubVNet.bicep
infra/bicep/02/: main.bicep  main.bicepparam.sample
infra/bicep/02/modules/: firewall.bicep  hubVNet.bicep  spokeVNet.bicep  vNetPeering.bicep  virtualMachine.bicep
infra/default/: README.md  build_infrastructure.yml  check_env_params.yml  extra_vars.yml  sample_my_vars.yml  test_az_auth.yml
infra/default/modules/: deploy_landing.yml  deploy_tf_and_deploy_app.yml  front_door_and_dns_timmyreillycom.yml  front_door_timmyreillycom.yml  groundedness.yml  hub_and_spoke.yml  managed_identity.yml  network.yml  ns_module_one.yml
infra/host_setup/: requirements.yml  ubuntu_host_setup.sh  ubuntu_setup.yml
infra/pipeline_or_action/: deploy_infra.yml
infra/rocket/: README.md  hub_and_spoke.yml  network_security_1234.yml  sample.env
infra/terraform/core/: main.tf
infra/terraform/front_door_and_dns/: main.tf  old_main.txt  outputs.tf  variables.tf
infra/terraform/preprovisioning/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
lab/backend/: README.md  app.py  chapp.py  curl.md  dockerfile  old_app.py  pyproject.toml  requirements.txt
lab/backend/tests/: test_app.py
lab/email_to_gpt/: demo.py  pyproject.toml
lab/email_to_gpt/models/: email_message.py
lab/email_to_gpt/services/: message_handler.py
lab/groundedness_client_for_python/: README.md  grounded_sample.json  groundedness.py  main.py  main_v2.py  makefile  pyproject.toml  v3.py  v4.py
lab/twitter_to_bluesky/: v1.py
lab/webv1/: README.md  pyproject.toml  startup.txt
lab/webv1/app/: main.py  schemas.py
lab/webv1/frontend/: package-lock.json  package.json
lab/webv1/frontend/src/: App.js  api.js
lab/webv1/frontend/src/components/: CreateMessage.js  LoginForm.js  MessageList.js  Register.js
lab/webv1/src/: dependencies.py  main.py  models.py  schemas.py
lab/webv1/src/prediction/: bootstrap.py  config.py  views.py
lab/webv1/src/prediction/adapters/: notifications.py  orm.py  repository.py
lab/webv1/src/prediction/domain/: commands.py  events.py  model.py
lab/webv1/src/tests/: conftest.py  random_refs.py
lab/webv1/src/tests/integration/: test_repository.py
lab/webv1/src/tests/unit/: test_handlers.py  test_predictions.py  test_transcripts.py
landing/: README.md
landing/v1/: home_page_main.html
(+24 files in other folders)
