[tool.poetry]
name = "email-to-gpt"
version = "0.1.0"
description = "use email as the proxy for gpt instructions"
authors = ["Tim Reilly  <timreilly@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pydantic = "^2.10.1"
langchain-openai = "^0.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
