[tool.poetry]
name = "groundedness-client-for-python"
version = "0.1.0"
description = "use the groundeness service in azure from python"
authors = ["Tim Reilly  <timreilly@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
azure-identity = "^1.18.0"
lagom = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
